100% I just need to perfectn All, contract,full time filter

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -85,18 +85,25 @@
         <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Job Listing</h1>
         <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
             <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+                
                 <li class="nav-item">
-                    <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-bs-toggle="pill" href="#tab-1">
-                        <h6 class="mt-n1 mb-0">Featured</h6>
+                    <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 " >
+                        <h6 class="mt-n1 mb-0"> Filter by : </h6>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class=" filter-link d-flex align-items-center text-start mx-3 ms-0 pb-3 active" data-value="4"  data-bs-toggle="pill">
+                        <h6 class="mt-n1 mb-0"> View All</h6>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
+                    <a class=" filter-link d-flex align-items-center text-start mx-3 pb-3" data-value="1" data-bs-toggle="pill">
                         <h6 class="mt-n1 mb-0">Full Time</h6>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="d-flex align-items-center text-start mx-3 me-0 pb-3" data-bs-toggle="pill" href="#tab-3">
+                    <a class="filter-link d-flex align-items-center text-start mx-3 me-0 pb-3" data-value="2" data-bs-toggle="pill">
                         <h6 class="mt-n1 mb-0">Part Time</h6>
                     </a>
                 </li>
@@ -106,68 +113,15 @@
                     <div class="my-list" data-page="0">
                     </div>                                                      
                     <button class=" load-more btn btn-primary py-3 px-5" >Load More</button>
-                </div>
-                <div id="tab-2" class="tab-pane fade show p-0">
-                    {% for job in jobs %}
-                         {% if job.jobType != 1 %}
-                            <div class="job-item p-4 mb-4">
-                                <div class="row g-4">
-                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="{{job.companylogo}}" alt="" style="width: 80px; height: 80px;">
-                                        <div class="text-start ps-4">
-                                            <h5 class="mb-3">{{job.title}} </h5>
-                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>{{job.location}} </span>
-                                            <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
-                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>{{job.salary}} </span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                        <div class="d-flex mb-3">
-                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                            <a class="btn btn-primary" href="">Apply Now</a>
-                                        </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Expiry in: {{job.expiryDate| timeuntil}}</small>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}                           
-                    {% endfor %} 
-                    <a class="btn btn-primary py-3 px-5" href="">Browse More Jobs</a>
-                </div>
-                <div id="tab-3" class="tab-pane fade show p-0">
-                    {% for job in jobs %}
-                         {% if job.jobType == 2 %}
-                            <div class="job-item p-4 mb-4">
-                                <div class="row g-4">
-                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="{{job.companylogo}}" alt="" style="width: 80px; height: 80px;">
-                                        <div class="text-start ps-4">
-                                            <h5 class="mb-3">{{job.title}} </h5>
-                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>{{job.location}} </span>
-                                            <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
-                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>{{job.salary}} </span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                        <div class="d-flex mb-3">
-                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                            <a class="btn btn-primary" href="">Apply Now</a>
-                                        </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Expiry in: {{job.expiryDate| timeuntil}}</small>
-                                    </div>
-                                </div>
-                            </div>                            
-                        {% endif %}                           
-
-                        {% endfor %} 
-                    <a class="btn btn-primary py-3 px-5" href="">Browse More Jobs</a>
-                </div>
+                </div>              
+                
             </div>
         </div>
     </div>
 </div>
 <!-- Jobs End -->
 <script type="text/javascript">
+    
     function calltheapi() {
             var currentPage = $('.my-list').data('page');
             var url = 'http://127.0.0.1:8000/terms.json';
@@ -177,11 +131,14 @@
             const keyword = params.get('keyword');
             const jobCategory = params.get('category');
 
+            const jobType = params.get('jobtype');
+
+
 
             $.ajax({
                 type: 'GET',
                 url: url,
-                data: {'page': currentPage + 1,'per_page':6,'keyword': keyword,'jobCategory': jobCategory,'location': location},
+                data: {'page': currentPage + 1,'per_page':6,'keyword': keyword,'jobType': jobType,'jobCategory': jobCategory,'location': location},
                 success: function(response) {
                     var data = response['data'];
                     if (data.length > 0) {
@@ -219,9 +176,24 @@
                 }
             });
         }
+
+
     $(document).ready(function() {
         calltheapi();       
         $('.load-more').click(calltheapi);
     });
+
+
+    $('.filter-link').click(function(e) {
+    e.preventDefault();
+    $(".my-list").empty();
+    var value = $(this).data('value');
+    var urlParams = new URLSearchParams(window.location.search);
+    urlParams.set('jobtype', value);
+    var newUrl = window.location.pathname + '?' + urlParams.toString();
+    window.history.pushState({path:newUrl},'',newUrl);
+    // Call function to update data with new filter
+     calltheapi();
+  });
 </script>
 {% endblock %}
