--- a/base/templates/base/job-list.html
+++ b/base/templates/base/job-list.html
@@ -25,7 +25,7 @@
                 <div class="col-md-10">
                     <div class="row g-2">
                         <div class="col-md-4">
-                            <input type="text" class="form-control border-0" name="keyword" placeholder="Keyword" />
+                            <input type="text" class="form-control border-0" name="keyword" placeholder="Title, company, industry..." />
                         </div>
                         <div class="col-md-4">
                             <select name="category" class="form-select border-0">
