--- a/base/templates/base/notfound.html
+++ b/base/templates/base/notfound.html
@@ -7,8 +7,8 @@
         <h1 class="display-3 text-white mb-3 animated slideInDown">404 Error</h1>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb text-uppercase">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'notfound' %}">Pages</a></li>
                 <li class="breadcrumb-item text-white active" aria-current="page">404 Error</li>
             </ol>
         </nav>
@@ -26,7 +26,7 @@
                 <h1 class="display-1">404</h1>
                 <h1 class="mb-4">Page Not Found</h1>
                 <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                <a class="btn btn-primary py-3 px-5" href="">Go Back To Home</a>
+                <a class="btn btn-primary py-3 px-5" href="{% url 'home' %}">Go Back To Home</a>
             </div>
         </div>
     </div>
