--- a/base/templates/base/job.html
+++ b/base/templates/base/job.html
@@ -25,7 +25,7 @@
                 <div class="d-flex align-items-center mb-5">
                     <img class="flex-shrink-0 img-fluid border rounded" src="{{job.companylogo}}" alt="" style="width: 80px; height: 80px;">
                     <div class="text-start ps-4">
-                        <h3 class="mb-3"> {{job.title}} hello ab {{job.get_absolute_url}}</h3>
+                        <h3 class="mb-3"> {{job.title}}</h3>
                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>{{job.location}}</span>
                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>{{jobtype}}</span>
                         <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>{{job.salary}}</span>
@@ -38,8 +38,8 @@
 
                 <div class="">
                     <h4 class="mb-4"> 
-                        
                         <a href="{{job.applicationLinkOrEmail}}" target="_blank"> Apply For The Job</a>
+
 
                     </h4>
                     
